# image-compress

./: .gitignore  Cargo.toml  LICENSE  README.md  RECORD.md  cliff.toml  clippy.toml  get_finder_path.scpt  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: RECORD.md  dependentabot.yml
.github/ISSUE_TEMPLATE/: bug.md  bug_report.yml
.github/bot/: package.json
.github/scripts/: cli_artifacts_rename.sh  cli_upload_gh_release.sh  publish.sh  tag.sh
.github/workflows/: CI.yml  lock.yml  publish-cargo-package.yml  publish-node-native.yml  publish-node-wasm.yml  publish-release.yml  publish.yml  rust.yml  stale.yml  test1.yml
.github1/: CODEOWNERS
.github1/bot/: tsconfig.json
bak/: napi.yml  publish-cargo-package.yml
bak/self/: publish-node-native.yml
bak/utools/: main.js
bindings/: Cargo.toml  RECODE.md
bindings/binding_compress_node/: Cargo.toml  build.rs  package.json
bindings/binding_compress_node/npm/darwin-arm64/: README.md  package.json
bindings/binding_compress_node/npm/darwin-x64/: README.md  package.json
bindings/binding_compress_node/npm/linux-arm64-gnu/: package.json
bindings/binding_compress_node/npm/linux-x64-gnu/: package.json
bindings/binding_compress_node/npm/win32-arm64-msvc/: package.json
bindings/binding_compress_node/npm/win32-ia32-msvc/: package.json
bindings/binding_compress_node/npm/win32-x64-msvc/: README.md  package.json
bindings/binding_compress_node/src/: compress.rs  index.rs  lib.rs
bindings/binding_compress_node/src/compress/: info.rs  kind.rs  mod.rs  options.rs  test.rs
bindings/binding_compress_node/src/compress/options/: imagequant.rs  mod.rs  mozjpeg.rs  oxipng.rs  ravif.rs  webp.rs
bindings/binding_compress_node/tests/: index.js
bindings/binding_compress_wasm/: Cargo.toml  RECORD.md  package.json
bindings/binding_compress_wasm/__test__/: index.html
bindings/binding_compress_wasm/js2rust/: point.js
bindings/binding_compress_wasm/src/: lib.rs
bindings/binding_compress_wasm/src/compress/: start.rs
bindings/binding_compress_wasm/src/demo/: dom.rs  js_use_rsut.rs  mod.rs  rust_use_js.rs
bindings/binding_compress_wasm/src/dom/: demo.rs
bindings/binding_compress_wasm/src/marco_utils/: console.rs
bindings/binding_demo_node/: Cargo.toml  package.json
bindings/binding_explore_node/: Cargo.toml  index.d.ts  index.js  package.json
core/: Cargo.toml
crate/core/: rustfmt.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  options.rs
crates/cli/src/commands/: demo.rs  jpeg.rs  mod.rs
crates/cli/src/commands/png/: codec.rs  imagequant.rs  mod.rs  oxipng.rs
crates/cli/src/sub_commands/: png.rs
crates/core/: Cargo.toml  RECORD.md
crates/core-native/: Cargo.toml
crates/core-native/src/: lib.rs  main.rs
crates/core-native/src/utils/: mime.rs
crates/core/src/: lib.rs  main.rs  operations.rs  transform.rs
crates/core/src/avif/codec/: docoder.rs  encoder.rs
crates/core/src/codecs/: mod.rs
crates/core/src/codecs/avif/: decoder.rs  encoder.rs
crates/core/src/codecs/avif/encoder/: mod.rs  options.rs  ravif.rs
crates/core/src/codecs/jpeg/: mozjpeg.rs
crates/core/src/codecs/jpeg/encoder/: jpeg_xl.rs  mod.rs  mozjpeg.rs  options.rs
crates/core/src/codecs/png/: imagequant.rs  mod.rs  oxipng.rs  oxipng_lossless.rs  png_lib.rs
crates/core/src/codecs/png/encoder/: imagequant.rs  imagequant_options.rs  mod.rs  oxipng.rs  oxipng_options.rs
crates/core/src/codecs/webp/: decoder.rs  encoder.rs
crates/core/src/codecs/webp/encoder/: mod.rs  options.rs  webp.rs
crates/core/src/compress/: index.rs  mod.rs
crates/core/src/compress/core/: webp.rs
crates/core/src/compress/core/jpeg/: lib_mozjpeg.rs  lib_mozjpeg_sys.rs
crates/core/src/compress/core/png/: mod.rs  png.rs
crates/core/src/jpeg/codec/: mod.rs  mozjpeg.rs
crates/core/src/operations/: icc.rs  quantize.rs  resize.rs  transform.rs
crates/core/src/png/: demo.rs  lossy.rs  mod.rs  oxipng_lossless.rs  png_warpper.rs
crates/core/src/png/codec/: imagequant.rs  mod.rs  oxipng.rs
crates/core/src/tiff/codec/: decoder.rs
crates/core/src/transform/: mod.rs  to_webp.rs
crates/core/src/utils/: get_info.rs  mod.rs
crates/core/src/utils/logic/: get_info.rs  mod.rs
crates/core/src/webp/codec/: decoder.rs  encoder.rs
crates/core/src/windows/: mod.rs  test.rs  win.rs
crates/core/tests/: avif.rs  demo.rs  jpeg.rs  mock.rs  png.rs  quantize.rs  resize.rs  tiff.rs  transform.rs  webp.rs
crates/core/tests/utils/: mock.rs  mod.rs  path.rs
crates/explore/: Cargo.toml
crates/explore/src/: lib.rs  mac.rs  main.rs  win.rs
crates/explore/src/dto/: app_info.rs  mod.rs
crates/explore/src/export/: dir.rs
crates/explore/src/macos/: cmd.rs  index.rs  mac.rs  mod.rs  utils.rs
crates/explore/src/windows/: demo.rs  explore.rs  index.rs  mod.rs  utils.rs  win.rs
crates/explore/src/windows/app/: main_window.rs  mod.rs  stratify_window.rs  utils.rs
crates/image-compress/: Cargo.toml
crates/image-compress/src/: compress.rs  export.rs  lib.rs  state.rs  support.rs
crates/image-compress/tests/: compress.rs
crates/node/: Cargo.toml  RECODE.md  build.rs
crates/node/src/: compress.rs  fs.rs  index.rs  lib.rs  log.rs  os_dir.rs
crates/node/src/demo/: fs.rs  mod.rs  variable.rs
crates/node/src/os/: mod.rs  system_info.rs
crates/test/: Cargo.toml
crates/test/src/: main.rs
crates/utils/: Cargo.toml
crates/utils/src/: env.rs  lib.rs  sleep.rs
crates/utils/src/file/: deep.rs  mime.rs  mod.rs
crates/utils/src/hook/: panic_hook.rs
crates/utils/src/log/: mod.rs  time.rs  tracing.rs
crates/utils/src/path/: deep.rs  dir.rs  ext.rs  mod.rs
crates/utils/tests/: log.rs
crates/wasm/: Cargo.toml  RECORD.md
crates/wasm/src/: lib.rs
crates/window/: Cargo.toml
crates/window/src/: lib.rs  mac.rs  main.rs  windows.rs
logs/: tracing.log.2024-01-17
node/: Cargo.toml
package/: index.js  package.json  pnpm-lock.yaml  test.js
script/: ci-rename-file.sh  cli.sh  wasm.build.bat  wasm.build.sh
src/: lib.rs  main.rs  prop.rs
(+81 files in other folders)
