[package]
name = "image_compress_node"
build = "build.rs"
version.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# 一个动态的系统库将会产生，类似于C共享库。当编译一个从其它语言加载调用的动态库时这属性将会被使用。
# 在 Linux 系统上会生成类型为 *.so 的文件，在 MacOS 上会生成类型为  *.dylib 的文件，在 Windows 系统则是 *.dll 类型的。
# 默认的 rust 打包类型
crate-type = ["cdylib", "rlib"]

[dependencies]
image_compress = { path = "../../crates/image-compress", features = ["native"] }
utils = { path = "../../crates/utils", features = ["hook"] }

tokio.workspace = true

tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing-futures.workspace = true
tracing-chrome.workspace = true

chrono.workspace = true

napi.workspace = true
napi-derive.workspace = true
# 用于在 Rust 程序运行时获取堆栈跟踪（回溯）的库
backtrace.workspace = true
once_cell.workspace = true


[build-dependencies]
napi-build.workspace = true
