[package]
name = "binding_compress_wasm"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false
crate-type = ["cdylib", "rlib"]

[dependencies]
image-compress2 = { path = "../../crates/core2" }

anyhow.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true

wasm-bindgen = { workspace = true, features = ["enable-interning"] }
wasm-bindgen-futures = "0.4.42"

# web-sys 的 Crate，它为 Rust 进一步提供了控制 DOM 的能力
web-sys = { workspace = true, features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'HtmlInputElement',
    'Performance',
    'console',
] }
js-sys.workspace = true
wee_alloc.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
