[package]
name = "cli"
version.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
bench = false
name = "image_compress_cli"

[dependencies]
image-compress-core = { workspace = true }

clap = { workspace = true, features = ["cargo", "derive"] }
indoc = { workspace = true }
anyhow = { workspace = true }
