[package]
name = "image_compress"
version.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = ['wasm']
native = []
wasm = []


[dependencies]
image_compress_core = { workspace = true, features = ["native"] }
utils = { workspace = true, features = ["file"] }

tokio.workspace = true
anyhow.workspace = true
infer.workspace = true
