[package]
name = "node"
build   = "build.rs"
version.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
# 一个动态的系统库将会产生，类似于C共享库。当编译一个从其它语言加载调用的动态库时这属性将会被使用。
# 在 Linux 系统上会生成类型为 *.so 的文件，在 MacOS 上会生成类型为  *.dylib 的文件，在 Windows 系统则是 *.dll 类型的。
crate-type = ["cdylib"]

[dependencies]
napi = "2.15.1"
napi-derive = "2.15.0"

[build-dependencies]
napi-build = "2.1.0"
