[package]
name = "window"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urlencoding = "2.1.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.25.0"
objc2 = "0.5.0"


[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.52.0",features = ["Win32","Foundation","Win32_System_Com","Win32_UI_Shell"]}
